--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 .content {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 nav {
@@ -252,7 +252,7 @@ body {
   padding: 0;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: #0B0C10;
 }
 
